创建dao、service基类 使用velocity模板引擎生成dao、service以及controller

--- a/src/main/resources/templates/codeBulider/model/ModelTemplateWithJPA.vm
+++ b/src/main/resources/templates/codeBulider/model/ModelTemplateWithJPA.vm
@@ -11,7 +11,7 @@ import javax.persistence.Column;
 */
 @Entity
 @Table(name="${tableInfo.tableName}")
-public class ${tableInfo.className}{
+public class ${tableInfo.className} implements java.io.Serializable {
 
     //public String tableName = "${tableInfo.tableName}";
 
