--- a/src/main/resources/templates/codeBulider/controller/restControllerTemplate.vm
+++ b/src/main/resources/templates/codeBulider/controller/restControllerTemplate.vm
@@ -1,7 +1,7 @@
-package com.sccl.YbZ.springboot.controller;
+package com.sccl.YbZ.springboot.biz.${tableName}.controller;
 
-import com.sccl.YbZ.springboot.model.entity.${entity};
-import com.sccl.YbZ.springboot.service.${serviceName};
+import com.sccl.YbZ.springboot.biz.${tableName}.model.${entity};
+import com.sccl.YbZ.springboot.biz.${tableName}.service.${serviceName};
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.web.bind.annotation.*;
