--- a/src/main/resources/templates/codeBulider/dao/daoTemplate.vm
+++ b/src/main/resources/templates/codeBulider/dao/daoTemplate.vm
@@ -1,7 +1,7 @@
-package com.sccl.YbZ.springboot.dao;
+package com.sccl.YbZ.springboot.biz.${tableName}.dao;
 
 import com.sccl.YbZ.springboot.common.BaseDao;
-import com.sccl.YbZ.springboot.model.entity.User;
+import com.sccl.YbZ.springboot.biz.${tableName}.model.${entity};
 
 /**
 * ${daoName}
